src/PclSharp/Std/VectorOfInt.generated.cs

// Code generated by a template
using System;
using System.Collections.Generic;
using System.Runtime.InteropServices;
using System.Runtime.CompilerServices;


namespace PclSharp.Std
{
	public static partial class Invoke
	{
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern IntPtr std_vector_int_ctor();
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern IntPtr std_vector_int_ctor_count(int count);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void std_vector_int_delete(ref IntPtr ptr);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void std_vector_int_at(IntPtr ptr,  UIntPtr idx, ref int value);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern UIntPtr std_vector_int_size(IntPtr ptr);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void std_vector_int_clear(IntPtr ptr);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void std_vector_int_resize(IntPtr ptr, int size);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void std_vector_int_add(IntPtr ptr, int value);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern IntPtr std_vector_int_data(IntPtr ptr);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void std_vector_int_insert(IntPtr ptr, IntPtr idx, int value);
	}

	public unsafe class VectorOfInt : Vector<int>
	{	
		private bool _suppressDispose;

		public override int Count => (int)Invoke.std_vector_int_size(_ptr);
		public IntPtr Data => Invoke.std_vector_int_data(_ptr);
		public int* DataU => (int*)Data;

		public VectorOfInt()
		{
			_ptr = Invoke.std_vector_int_ctor();
		}

		public VectorOfInt(int count)
		{
			_ptr = Invoke.std_vector_int_ctor_count(count);
		}

		/// <summary>
        /// construct as a copy of the list
        /// </summary>
        /// <param name="list"></param>
		public VectorOfInt(List<int> list)
        {
            var arr = list.ToArray();
            _ptr = Invoke.std_vector_int_ctor_count(arr.Length);
            
            var dptr = (int*)Data;
            for(var i = 0; i < arr.Length; i++)
                dptr[i] = arr[i];
        }

		internal VectorOfInt(IntPtr ptr)
		{
			_suppressDispose = true;
			_ptr = ptr;
		}

		public override void At(int idx, ref int value)
		{
			Invoke.std_vector_int_at(_ptr, (UIntPtr)idx, ref value);
		}

		public override int this[int idx]
        {
            get { return DataU[idx]; }
			set { DataU[idx] = value; }
		}

		public override void Resize(int size)
			=> Invoke.std_vector_int_resize(_ptr, size);

		public override void Add(int value)
			=> Invoke.std_vector_int_add(_ptr, value);

		public override void CopyTo(int[] arr, int idx)
		{
            fixed (int* aptr = arr)
            {
                Unsafe.CopyBlockUnaligned(aptr, DataU, (uint)(sizeof(int) * Count));
            }
		}

		public override int[] ToArray()
		{
			var arr = new int[Count];
            fixed (int* aptr = arr)
            {
                Unsafe.CopyBlockUnaligned(aptr, DataU, (uint)(sizeof(int) * arr.Length));
            }

			return arr;
		}

		public override void Clear() => Invoke.std_vector_int_clear(_ptr);

		public override void Insert(int index, int item)
			=> Invoke.std_vector_int_insert(_ptr, (IntPtr)index, item);

		public override IEnumerator<int> GetEnumerator()
		{
			var count = Count;
			for(var i = 0; i < count; i++)
				yield return this[i];
		}

		protected override void DisposeObject()
		{
			if (_suppressDispose)
				return;
			Invoke.std_vector_int_delete(ref _ptr);
		}
	}
}
